--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "markdown summary convert to json",
   "main": "index.js",
+  "bin": {
+    "2json": "index.js"
+  },
   "dependencies": {
     "fs-extra": "^3.0.1",
     "glob": "^7.1.2"
